@@ -9,6 +9,7 @@ User-visible changes in version 0.9.4  (2010-  -  ):
 * removed syntax "commands < file[m:n]", only the whole file can be executed
 * modulo syntax changed from a%b to mod(a,b)
 * syntax: '-' replaced with '_' in settings and 'info fit_history'
+* added Perl bindings (manual compilation, try cd swig/ && make perl)
 
 User-visible changes in version 0.9.3  (2010-06-24):
 * changed implementation of gamma and related functions (using boost.math now)
